lib/biodiversity/parser/scientific_name_canonical.rb
# encoding: UTF-8
# Autogenerated from a Treetop grammar. Edits may be lost.


module ScientificNameCanonical
  include Treetop::Runtime

  def root
    @root ||= :root
  end

  include ScientificNameDirty

  module Root0
    def hybrid
      false
    end

    def details
      [super]
    end

    def parser_run
      3
    end
  end

  module Root1
    def hybrid
      false
    end

    def details
      [super]
    end

    def parser_run
      3
    end
  end

  def _nt_root
    start_index = index
    if node_cache[:root].has_key?(index)
      cached = node_cache[:root][index]
      if cached
        node_cache[:root][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    r1 = _nt_multinomial_with_garbage
    r1.extend(Root0)
    r1.extend(Root0)
    if r1
      r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
      r0 = r1
    else
      r2 = _nt_uninomial_with_garbage
      r2.extend(Root1)
      r2.extend(Root1)
      if r2
        r2 = SyntaxNode.new(input, (index-1)...index) if r2 == true
        r0 = r2
      else
        @index = i0
        r0 = nil
      end
    end

    node_cache[:root][start_index] = r0

    r0
  end

  module MultinomialWithGarbage0
    def a
      elements[0]
    end

    def space1
      elements[1]
    end

    def b
      elements[2]
    end

    def space2
      elements[3]
    end

    def c
      elements[4]
    end

    def garbage
      elements[5]
    end
  end

  module MultinomialWithGarbage1
    def value
      a.value + " " + b.value + " " + c.value
    end

    def canonical
      a.canonical + " " + c.canonical
    end

    def pos
      a.pos.merge(b.pos).merge(c.pos)
    end

    def details
      a.details.merge(b.details).merge(c.details)
    end
  end

  module MultinomialWithGarbage2
    def a
      elements[0]
    end

    def space
      elements[1]
    end

    def b
      elements[2]
    end

    def garbage
      elements[3]
    end
  end

  module MultinomialWithGarbage3
    def value
      a.value + " " + b.value
    end

    def canonical
      a.canonical
    end

    def pos
      a.pos.merge(b.pos)
    end

    def details
      a.details.merge(b.details)
    end
  end

  module MultinomialWithGarbage4
    def a
      elements[0]
    end

    def space
      elements[1]
    end

    def b
      elements[2]
    end

    def garbage
      elements[3]
    end
  end

  module MultinomialWithGarbage5
    def value
      a.value + " " + b.value
    end

    def canonical
      a.canonical + " " + b.canonical
    end

    def pos
      a.pos.merge(b.pos)
    end

    def details
      a.details.merge(b.details)
    end
  end

  def _nt_multinomial_with_garbage
    start_index = index
    if node_cache[:multinomial_with_garbage].has_key?(index)
      cached = node_cache[:multinomial_with_garbage][index]
      if cached
        node_cache[:multinomial_with_garbage][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_genus
    s1 << r2
    if r2
      r3 = _nt_space
      s1 << r3
      if r3
        r4 = _nt_infragenus
        s1 << r4
        if r4
          r5 = _nt_space
          s1 << r5
          if r5
            r6 = _nt_species
            s1 << r6
            if r6
              r7 = _nt_garbage
              s1 << r7
            end
          end
        end
      end
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(MultinomialWithGarbage0)
      r1.extend(MultinomialWithGarbage1)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
      r0 = r1
    else
      i8, s8 = index, []
      r9 = _nt_genus
      s8 << r9
      if r9
        r10 = _nt_space
        s8 << r10
        if r10
          r11 = _nt_infragenus
          s8 << r11
          if r11
            r12 = _nt_garbage
            s8 << r12
          end
        end
      end
      if s8.last
        r8 = instantiate_node(SyntaxNode,input, i8...index, s8)
        r8.extend(MultinomialWithGarbage2)
        r8.extend(MultinomialWithGarbage3)
      else
        @index = i8
        r8 = nil
      end
      if r8
        r8 = SyntaxNode.new(input, (index-1)...index) if r8 == true
        r0 = r8
      else
        i13, s13 = index, []
        r14 = _nt_genus
        s13 << r14
        if r14
          r15 = _nt_space
          s13 << r15
          if r15
            r16 = _nt_species
            s13 << r16
            if r16
              r17 = _nt_garbage
              s13 << r17
            end
          end
        end
        if s13.last
          r13 = instantiate_node(SyntaxNode,input, i13...index, s13)
          r13.extend(MultinomialWithGarbage4)
          r13.extend(MultinomialWithGarbage5)
        else
          @index = i13
          r13 = nil
        end
        if r13
          r13 = SyntaxNode.new(input, (index-1)...index) if r13 == true
          r0 = r13
        else
          @index = i0
          r0 = nil
        end
      end
    end

    node_cache[:multinomial_with_garbage][start_index] = r0

    r0
  end

  module UninomialWithGarbage0
    def a
      elements[0]
    end

    def b
      elements[1]
    end
  end

  module UninomialWithGarbage1
    def value
      a.value
    end

    def canonical
      a.canonical
    end

    def pos
      a.pos
    end

    def details
      {:uninomial => a.details[:uninomial]}
    end
  end

  def _nt_uninomial_with_garbage
    start_index = index
    if node_cache[:uninomial_with_garbage].has_key?(index)
      cached = node_cache[:uninomial_with_garbage][index]
      if cached
        node_cache[:uninomial_with_garbage][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0, s0 = index, []
    r1 = _nt_uninomial_string
    s0 << r1
    if r1
      r2 = _nt_garbage
      s0 << r2
    end
    if s0.last
      r0 = instantiate_node(SyntaxNode,input, i0...index, s0)
      r0.extend(UninomialWithGarbage0)
      r0.extend(UninomialWithGarbage1)
    else
      @index = i0
      r0 = nil
    end

    node_cache[:uninomial_with_garbage][start_index] = r0

    r0
  end

  module Garbage0
    def space
      elements[0]
    end

  end

  module Garbage1
    def space1
      elements[0]
    end

    def space2
      elements[2]
    end

  end

  module Garbage2
    def space_hard
      elements[0]
    end

  end

  def _nt_garbage
    start_index = index
    if node_cache[:garbage].has_key?(index)
      cached = node_cache[:garbage][index]
      if cached
        node_cache[:garbage][index] = cached = SyntaxNode.new(input, index...(index + 1)) if cached == true
        @index = cached.interval.end
      end
      return cached
    end

    i0 = index
    i1, s1 = index, []
    r2 = _nt_space
    s1 << r2
    if r2
      if (match_len = has_terminal?("$$g@rbg3$$", false, index))
        r3 = instantiate_node(SyntaxNode,input, index...(index + match_len))
        @index += match_len
      else
        terminal_parse_failure('"$$g@rbg3$$"')
        r3 = nil
      end
      s1 << r3
    end
    if s1.last
      r1 = instantiate_node(SyntaxNode,input, i1...index, s1)
      r1.extend(Garbage0)
    else
      @index = i1
      r1 = nil
    end
    if r1
      r1 = SyntaxNode.new(input, (index-1)...index) if r1 == true
      r0 = r1
    else
      i4, s4 = index, []
      r5 = _nt_space
      s4 << r5
      if r5
        if has_terminal?(@regexps[gr = '\A["\',.]'] ||= Regexp.new(gr), :regexp, index)
          r6 = true
          @index += 1
        else
          terminal_parse_failure('["\',.]')
          r6 = nil
        end
        s4 << r6
        if r6
          r7 = _nt_space
          s4 << r7
          if r7
            s8, i8 = [], index
            loop do
              if has_terminal?(@regexps[gr = '\A[^щ]'] ||= Regexp.new(gr), :regexp, index)
                r9 = true
                @index += 1
              else
                terminal_parse_failure('[^щ]')
                r9 = nil
              end
              if r9
                s8 << r9
              else
                break
              end
            end
            r8 = instantiate_node(SyntaxNode,input, i8...index, s8)
            s4 << r8
          end
        end
      end
      if s4.last
        r4 = instantiate_node(SyntaxNode,input, i4...index, s4)
        r4.extend(Garbage1)
      else
        @index = i4
        r4 = nil
      end
      if r4
        r4 = SyntaxNode.new(input, (index-1)...index) if r4 == true
        r0 = r4
      else
        i10, s10 = index, []
        r11 = _nt_space_hard
        s10 << r11
        if r11
          s12, i12 = [], index
          loop do
            if has_terminal?(@regexps[gr = '\A[^ш]'] ||= Regexp.new(gr), :regexp, index)
              r13 = true
              @index += 1
            else
              terminal_parse_failure('[^ш]')
              r13 = nil
            end
            if r13
              s12 << r13
            else
              break
            end
          end
          if s12.empty?
            @index = i12
            r12 = nil
          else
            r12 = instantiate_node(SyntaxNode,input, i12...index, s12)
          end
          s10 << r12
        end
        if s10.last
          r10 = instantiate_node(SyntaxNode,input, i10...index, s10)
          r10.extend(Garbage2)
        else
          @index = i10
          r10 = nil
        end
        if r10
          r10 = SyntaxNode.new(input, (index-1)...index) if r10 == true
          r0 = r10
        else
          @index = i0
          r0 = nil
        end
      end
    end

    node_cache[:garbage][start_index] = r0

    r0
  end

end

class ScientificNameCanonicalParser < Treetop::Runtime::CompiledParser
  include ScientificNameCanonical
end

